--- a/RisingSea/CategoriesSheaves.tex
+++ b/RisingSea/CategoriesSheaves.tex
@@ -848,7 +848,11 @@ which amounts to showing that for any $a_j \in A_j$, we have that $[F(m)(a_j) ] 
 In fact, the construction we gave above works for many concrete algebraic categories. For our examples, we'll use $\mathsf{Mod}_R$. Given a diagram of $R$-modules $M_i$, the colimit $\lim\limits_\to M_i$ is given by the same underlying set as above, but we'll need to define addition and scalar multiplication to give it the structure of an $R$-module. For addition. let $m_i \in M_i$ and $m_j \in M_j$. Since we are assume the diagram is indexed by a filtered category, we know we have morphism $u: i \to k$ and $v : j \to k$, so we can define $m_i + m_j = F(u)(m_i) + F(v)(m_j) \in M_k$. We say that some element $m = 0$ if there is some $u$ with $u(m) = 0$. Finally, scalar multplication is define in the normal way.
 %
 \begin{exer}
-Verify that the construction above defines an $R$-module by showing that the addition and scarlar multiplication are well defined.
+Interpret the localization of an integral domain as a colimit over a filtered set. Let $S$ be a multiplicative set and interpret $S\inv R$ as $\lim\limits_\to \frac{1}{s}R$ where the limit is over all $s \in S$ and we are working in the cateogry of $R$-modules
 \end{exer}
+%
+\begin{proof}
+
+\end{proof}
 %
 \end{document}
